# Lidar-odometry

./: .gitignore  BAG_PROCESSING_GUIDE.md  CMakeLists.txt  INSTALL_ROS.md  PROJECT_FILES_ORGANIZATION.md  QUICK_START.md  README.md  package.xml  simple_lidar_processor.py
code/02_lichengji/lio_icp/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
code/02_lichengji/lio_icp/devel/lib/pkgconfig/: lio_ndt.pc
code/02_lichengji/lio_icp/devel/share/lio_ndt/cmake/: lio_ndtConfig.cmake
code/02_lichengji/lio_icp/src/: CMakeLists.txt  步骤.md
code/02_lichengji/lio_icp/src/lio_ndt/: CMakeLists.txt
code/02_lichengji/lio_icp/src/lio_ndt/include/lio_ndt/front_end/: front_end.hpp
code/02_lichengji/lio_icp/src/lio_ndt/launch/: front_end_icp.launch  front_end_ndt.launch  front_end_optimized_icp.launch
code/02_lichengji/lio_icp/src/lio_ndt/src/: front_end_node.cpp
code/02_lichengji/lio_icp/src/lio_ndt/src/front_end/: front_end.cpp
code/02_lichengji/lio_icp/src/lio_ndt/src/method/: optimized_ICP_GN.cpp
code/02_lichengji/lio_icp/src/regis/: 步骤.md
include/lidar_odometry/: gn_icp_registration.h  imu_integration.h  lidar_odometry.h  ndt_registration.h  ros_odometry_node.h  so3_utils.h  trajectory_evaluator.h
scripts/: analyze_bag.py  convert_bag.py  direct_bag_processor.py  process_bag.sh  quick_bag_test.py  run_kitti_example.sh  show_results.py  simple_bag_processor.py  simple_trajectory_evaluator.py  test_odometry.sh
src/: gn_icp_registration.cpp  icp_odometry.cpp  imu_integration.cpp  kitti_enhanced_odometry.cpp  kitti_icp_odometry.cpp  kitti_ndt_odometry.cpp  lidar_odometry.cpp  lidar_odometry_enhanced.cpp  ndt_odometry.cpp  ndt_registration.cpp  ros_odometry_node.cpp
